--- a/package.json
+++ b/package.json
@@ -237,6 +237,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
+    "dotenv": "^10.0.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.3.5",
     "electron-updater": "^4.3.8",
@@ -245,7 +246,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devEngines": {
     "node": ">=10.x",
