--- a/package.json
+++ b/package.json
@@ -246,8 +246,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "regenerator-runtime": "^0.13.5",
-    "spotify-web-api-node": "^5.0.2"
+    "regenerator-runtime": "^0.13.5"
   },
   "devEngines": {
     "node": ">=10.x",
