--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
   "search.exclude": {
     ".git": true,
     ".eslintcache": true,
-    ".erb/dll": true,
+    ".config/dll": true,
     "build/{release,app/dist}": true,
     "node_modules": true,
     "npm-debug.log.*": true,
