--- a/package.json
+++ b/package.json
@@ -259,6 +259,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^8.0.3",
     "regenerator-runtime": "^0.13.5"
   },
   "devEngines": {
